--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:ems="10"
-        android:hint="Email"
+        android:hint="Emai"
         android:inputType="textEmailAddress"
         app:layout_constraintBottom_toTopOf="@+id/etAssunto"
         app:layout_constraintEnd_toEndOf="parent"
